2011-07-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-show-reports): Add packages to the
	status bar.

2011-07-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-send-control-message): Add "invalid".

2011-07-15  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-default-severities)
	(debbugs-gnu-severity-preference)
	(debbugs-gnu-send-control-message): Add "serious".
	(debbugs-gnu-select-report): Add ":" in reply subject.

2011-07-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-pending): New face.
	(debbugs-gnu-state-preference): Sort pending towards the end.

2011-07-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-send-control-message): Add "pending"
	etc.

2011-07-14  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-subject): New defvar.
	(debbugs-gnu-select-report): Set it buffer local.
	(debbugs-gnu-summary-mode): Use it for adapting subject of replies.

2011-07-13  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-get-bugs): Weaken syntax for packages (and
	severities and tags).  Fix error messages.

2011-07-12  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-get-bugs): Reinsert sorting of ids.
	This is needed when several sets of bugs are retrieved in a loop.
	Allow empty packages or severities.
	(debbugs-gnu-show-reports): Erase buffer on entry.  Initialize
	header line, move from ...
	(debbugs-gnu-mode): ... here.
	(debbugs-gnu-state-preference): Make it a defconst.
	(debbugs-gnu-severity-preference): New defconst.
	(debbugs-gnu-get-state-preference)
	(debbugs-gnu-get-severity-preference): New defuns.
	(debbugs-gnu-sort-state): When two bugs have the same age, sort
	per serverity.

2011-07-11  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-sort-state): Give tagged bugs